--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "README.md"
   ],
   "dependencies": {
+    "deprecated-react-native-prop-types": "^2.3.0",
     "prop-types": "^15.6.2",
     "react-native-easy-view-transformer": "^1.2.0"
   },
